# dignea

./: .coveralls.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  Doxyfile  README.md  build.sh  codecov.yml  cppcheck_report.txt
.github/workflows/: catch.yml  cmake.yml  coverage.yml  cppcheck.yml  documentation.yml  publish.yml
data/instances/BinPacking/: sample.bpp
data/instances/TSP/: example1.tsp
data/models/PCA/: pca_components.txt  pca_components_T.txt  pca_mean.txt  scaler_mean.txt  scaler_pca_pipe_for_kp_space.pkl  scaler_scale.txt
docs/: header.html
docs/markdown/: 01_0_mea_example.md  01_create_algorithm.md  02_create_problem.md  04_docker_usage.md
examples/: BPP_Heuristics.cpp  EIGKPExperiment.cpp  EIGTSPExperiment.cpp  GeneticTSP.cpp  Genetic_KNP.cpp  KP_Heuristics.cpp  MEAKPExperiment.cpp  MEATSPExperiment.cpp  MapElites_KPDomain.cpp  Pisinger_KP.cpp  TSP_Heuristics.cpp
html/: AbstractDomain_8h.html  AbstractDomain_8h_source.html  AbstractEA_8h.html  AbstractEA_8h.js  AbstractEA_8h_source.html  AbstractGA_8h.html  AbstractGA_8h_source.html  AbstractInstance_8h.html  AbstractInstance_8h_source.html  AbstractSolver_8h.html  AbstractSolver_8h.js  AbstractSolver_8h_source.html  BPPDomain_8cpp.html  BPPDomain_8h.html  BPPDomain_8h_source.html  BPPInstance_8cpp.html  BPPInstance_8h.html  BPPInstance_8h_source.html  BPP_8h.html  BPP_8h_source.html  BestFit_8cpp.html  BestFit_8h.html  BestFit_8h.js  BestFit_8h_source.html  BinaryTournamentSelection_8h.html  BinaryTournamentSelection_8h_source.html  CXFactory_8h_source.html  Combo_8h.html  Combo_8h.js  Combo_8h_source.html  Comparator_8h.html  Comparator_8h.js  Comparator_8h_source.html  CrossoverTypes_8h.html  CrossoverTypes_8h.js  CrossoverTypes_8h_source.html  Crossover_8h_source.html  Default_8h_source.html  Distance_8h_source.html  DoubleSphere_8cpp.html  (+657 more)
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  (+73 more)
include/dignea/builders/: EIGBuilder.h  ExpBuilder.h  GABuilder.h  MEABuilder.h  ParGABuilder.h
include/dignea/core/: AbstractEA.h  AbstractGA.h  AbstractSolver.h  Crossover.h  Diversity.h  Front.h  Heuristic.h  Mutation.h  Problem.h  Replacement.h  Selection.h  Solution.h
include/dignea/crossovers/: OrderCrossover.h  UniformCrossover.h
include/dignea/distances/: Distance.h  Euclidean.h  Hamming.h  Manhattan.h
include/dignea/evaluators/: ParallelOMPEvaluator.h  ParallelSTL.h  PopulationEvaluator.h
include/dignea/evolution/: AvgEvolution.h  DiversityEvolution.h  Evolution.h
include/dignea/experiment/: AnalysisData.h  Experiment.h  ExperimentAnalysis.h
include/dignea/factories/: CXFactory.h  MutFactory.h  NSFactory.h  RepFactory.h  SelFactory.h
include/dignea/generator/: AbstractDomain.h  AbstractInstance.h  EIG.h  MapElites.h
include/dignea/mea/: MEA.h  MEAProblem.h  MEASolution.h
include/dignea/metrics/: AverageFitness.h  BestFitness.h  Metric.h  WorstFitness.h
include/dignea/mutations/: ScrambleMutation.h  SwapMutation.h  UniformAllMutation.h  UniformOneMutation.h
include/dignea/problems/: BPP.h  DoubleSphere.h  KP.h  KPNR.h  Rastrigin.h  SampleProblem.h  Sphere.h  TSP.h  ZDT.h
include/dignea/replacements/: EGenerational.h  FirstImprove.h  ReplaceWorst.h
include/dignea/searches/: NSFeatures.h  NSPerformance.h  NoveltySearch.h  Search.h
include/dignea/selections/: BinaryTournamentSelection.h
include/dignea/types/: CrossoverTypes.h  EvaluatorTypes.h  GATypes.h  MutationTypes.h  NSTypes.h  ReplacementTypes.h  SelectionTypes.h  SolutionTypes.h
include/dignea/utilities/: Comparator.h  KNN.h  NSWarmUp.h  PCA.h  Sorter.h  Statistics.h
lib/fmt/: CMakeLists.txt  CONTRIBUTING.md  FMT.cbp
lib/fmt/doc/: CMakeLists.txt  build.py  conf.py
lib/fmt/src/: fmt.cc  format.cc  os.cc
lib/fmt/support/: AndroidManifest.xml  appveyor-build.py  appveyor.yml  manage.py  rst2md.py
lib/fmt/test/: CMakeLists.txt  args-test.cc  chrono-test.cc  color-test.cc  compile-test.cc  core-test.cc  enforce-checks-test.cc  format  format-impl-test.cc  format-test.cc  gtest-extra-test.cc  gtest-extra.cc  gtest-extra.h  mock-allocator.h  os-test.cc  (+15 more)
markdown/: 00_getting_started.md  01_create_algorithm.md  03_create_instance_generator.md  04_docker_usage.md
scripts/: load_and_compile.sh  run_experiments.sh
test/: main.cpp
test/builders/: EIGBuilderTest.cpp  ExpBuilderTest.cpp  GABuilderTest.cpp  MEABuilderTest.cpp
test/core/: DiversityTest.cpp  FrontTest.cpp  ProblemTest.cpp  SolutionTest.cpp
test/crossovers/: OrderCrossoverTest.cpp  UniformCrossoverTest.cpp
test/distances/: EuclideanTest.cpp  HammingTest.cpp  ManhattanTest.cpp
test/evaluators/: ParallelOMPEvaluatorTest.cpp  PopulationEvaluatorTest.cpp
test/evolution/: AvgEvolutionTest.cpp  DiversityEvolutionTest.cpp  EvolutionTest.cpp
test/experiment/: AnalysisDataTest.cpp  ExperimentTest.cpp
test/factories/: CXFactoryTest.cpp  MutFactoryTest.cpp  NSFactoryTest.cpp  SelFactoryTest.cpp
test/generator/: AbstractInstanceTest.cpp  EIGTest.cpp  MapElitesTest.cpp
test/mea/: MEASolutionTest.cpp  MEATest.cpp
test/metrics/: AverageFitnessTest.cpp  BestFitnessTest.cpp  WorstFitnessTest.cpp
test/mutations/: SwapMutationTest.cpp  UniformAllMutationTest.cpp  UniformOneMutationTest.cpp
test/problems/: BPPTest.cpp  KPNRTest.cpp  KPTest.cpp  RastriginTest.cpp  SampleProblemTest.cpp  SphereTest.cpp  TSPTest.cpp
test/replacements/: EGenerationalTest.cpp  FirstImproveTest.cpp  ReplaceWorstTest.cpp
test/searches/: NSFeaturesTest.cpp  NSPerformanceTest.cpp  NoveltySearchTest.cpp
test/selections/: BinaryTournamentSelectionTest.cpp
test/utilities/: KNNTest.cpp  StatisticsTest.cpp
(+801 files in other folders)
